--- a/essentials/settings.mdx
+++ b/essentials/settings.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Global Settings'
-description: 'Mintlify gives you complete control over the look and feel of your documentation using the docs.json file'
-icon: 'gear'
+title: "Global Settings"
+description: "Mintlify gives you complete control over the look and feel of your documentation using the docs.json file"
+icon: "gear"
 ---
 
 Every Mintlify site needs a `docs.json` file with the core configuration settings. Learn more about the [properties](#properties) below.
@@ -179,7 +179,7 @@ Example: `mintlify`
 </ResponseField>
 
 <ResponseField name="api" type="API">
-  Configuration for API settings. Learn more about API pages at [API Components](/api-playground/demo).
+  Configuration for API settings. Learn more about API pages at [API Reference Introduction](/api-reference/introduction).
   <Expandable title="API">
     <ResponseField name="baseUrl" type="string">
       The base url for all API endpoints. If `baseUrl` is an array, it will enable for multiple base url
@@ -211,7 +211,7 @@ Example: `mintlify`
         <ResponseField name="mode" default="show" type='"show" | "simple" | "hide"'>
           Whether the playground is showing, hidden, or only displaying the endpoint with no added user interactivity `simple`
 
-          Learn more at the [playground guides](/api-playground/demo)
+          Learn more at the [playground guides](/api-reference/introduction)
         </ResponseField>
       </Expandable>
     </ResponseField>
