--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,137 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Overview"
+description: "Everything you need to launch, learn, and iterate with Humyn Studio."
 ---
 
-## Setting up
+# Welcome to Humyn Docs
 
-Get your documentation site up and running in minutes.
+Humyn turns real conversations from Reddit into crisp, trustworthy insight for product teams. These docs get you from first login to confident decisions without fluff.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+<img
+  src="/images/hero-light.png"
+  alt="Humyn Studio dashboard highlighting comment insights"
+  style={{ borderRadius: "1rem", marginTop: "1.5rem", boxShadow: "0 24px 70px rgba(9, 9, 11, 0.18)" }}
+/>
 
-## Make it yours
+## Start with the essentials
 
-Design a docs site that looks great and empowers your users.
+Get the full picture of what Humyn does and how to ship the right thing faster.
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="What is Humyn?"
+    icon="lightbulb"
+    href="/introduction/what-is-humyn"
   >
-    Edit your docs locally and preview them in real time.
+    Understand the vision, use cases, and why teams rely on Humyn.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Quickstart"
+    icon="rocket"
+    href="/introduction/quickstart"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    Set up your workspace, connect sources, and surface first insights in minutes.
   </Card>
   <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
+    title="Invite your team"
+    icon="users"
+    href="/account-billing/team-collaboration"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Bring product, design, and research together with secure shared access.
+  </Card>
+  <Card
+    title="Manage billing"
+    icon="credit-card"
+    href="/account-billing/managing-subscription"
+  >
+    Control plans, usage, and invoices from one place.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Core workflows
 
-Everything you need to create world-class documentation.
+Humyn is built for designers by designers. Focus on the flows that matter most.
+
+<Columns cols={3}>
+  <Card
+    title="Feedback Hub"
+    icon="comments"
+    href="/core-features/feedback-hub"
+  >
+    Centralize every conversation and filter what matters in seconds.
+  </Card>
+  <Card
+    title="Insights SWOT"
+    icon="chart-simple"
+    href="/core-features/insights-swot"
+  >
+    Turn raw sentiment into strengths, weaknesses, opportunities, and threats.
+  </Card>
+  <Card
+    title="Personas"
+    icon="user"
+    href="/core-features/personas"
+  >
+    Keep customer archetypes live and grounded in the latest community signals.
+  </Card>
+  <Card
+    title="Idea Scorecard"
+    icon="star"
+    href="/core-features/idea-overview-score"
+  >
+    Rank ideas with data-backed confidence before you ship.
+  </Card>
+  <Card
+    title="AI Chat"
+    icon="comment-dots"
+    href="/core-features/ai-chat"
+  >
+    Ask follow-up questions without leaving the insight stream.
+  </Card>
+  <Card
+    title="Themes & Keywords"
+    icon="tags"
+    href="/core-features/themes-keywords"
+  >
+    Track emerging topics and spot shifts before they hit your roadmap.
+  </Card>
+</Columns>
+
+## Guides for common jobs
+
+When you need to go deeper, these walkthroughs keep the team moving.
 
 <Columns cols={2}>
   <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
+    title="Validate a new product idea"
+    icon="wand-magic-sparkles"
+    href="/guides/validate-new-product-idea"
   >
-    Use MDX to style your docs pages.
+    Pressure-test concepts using community conversations.
   </Card>
   <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
+    title="Run competitor analysis"
+    icon="chart-line"
+    href="/guides/competitor-analysis-swot"
   >
-    Add sample code to demonstrate how to use your product.
+    Position your solution with a fresh read on what customers say today.
   </Card>
   <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
+    title="Prioritize feature requests"
+    icon="list-check"
+    href="/guides/prioritize-feature-requests"
   >
-    Display images and other media.
+    Rank enhancements by impact and urgency with live data.
   </Card>
   <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
+    title="Build research-backed personas"
+    icon="user-group"
+    href="/guides/create-data-backed-personas"
   >
-    Write once and reuse across your docs.
+    Give design and product a shared, constantly updating source of truth.
   </Card>
 </Columns>
 
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<Tip>
+Need help fast? Hit the `Support` link in the navbar or email <a href="mailto:hello@humyn.space">hello@humyn.space</a>.
+</Tip>
