docs: refresh content and branding

--- a/essentials/images.mdx
+++ b/essentials/images.mdx
@@ -17,7 +17,8 @@ Humyn’s visual identity leans on calm gradients, rounded corners, and ample wh
 - `/images/hero-light.png`: Primary hero for light backgrounds. Preferred for documentation and marketing landing pages.
 - `/images/hero-dark.png`: Alternate hero for dark or mixed backgrounds. Works well in slide decks.
 - `/images/checks-passed.png`: Product UI close-up highlighting moderation and approval states.
-- `/logo/light.svg` and `/logo/dark.svg`: Wordmark optimized for respective modes.
+- `/logo/light.svg` and `/logo/dark.svg`: Official Humyn mark (dark/light variants).
+- `/svg logos/`: Original exports if you need to create new sizes.
 
 <Callout>
 All image assets live in the `/images` and `/logo` directories. Keep filenames predictable; we reserve camelCase for UI exports and kebab-case for marketing composites.
@@ -49,3 +50,9 @@ Use the built-in Markdown syntax for simple screenshots, and drop down to JSX on
 <Tip>
 Need something that isn’t here? Ping the design team in `#brand-lab` with your use case so we can ship a vetted asset instead of improvising.
 </Tip>
+
+## Video & motion placeholders
+
+- Store Loom or Framer embeds under `/videos` (create if needed) with descriptive filenames like `community-scan-demo.mp4`.
+- Document aspect ratios and durations so editors keep landing pages consistent.
+- Capture thumbnail images and save them alongside the video for use in cards or embeds.
