docs: refresh homepage and metrics assets

--- a/core-features/metrics.mdx
+++ b/core-features/metrics.mdx
@@ -7,6 +7,18 @@ description: "Translate Humyn signals into the numbers leaders expect"
 
 Metrics transforms the qualitative insights Humyn surfaces into lightweight KPIs. It gives founders, product, and GTM leaders a clear lens on how community sentiment and activation efforts are trending.
 
+<img
+  src="/assets/metrics-mockup.png"
+  alt="Humyn metrics mockup illustrating sentiment and volume trends"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
+/>
+
+The mockup above reflects how Humyn pairs qualitative signals with metric tiles:
+
+- **Conversation volume** visualizes the size of the dataset backing every insight.  
+- **Sentiment mix** shows the balance between praise, blockers, and questions so you can catch shifts instantly.  
+- **Theme drill-downs** surface underlying quotes, letting teams move from KPI to evidence in one click.
+
 ## Starter metric catalog
 
 | Metric | Description | Source | Refresh |
