--- a/essentials/images.mdx
+++ b/essentials/images.mdx
@@ -19,6 +19,9 @@ Humyn’s visual identity leans on calm gradients, rounded corners, and ample wh
 - `/images/checks-passed.png`: Product UI close-up highlighting moderation and approval states.
 - `/logo/light.svg` and `/logo/dark.svg`: Official Humyn mark (dark/light variants).
 - `/svg logos/`: Original exports if you need to create new sizes.
+- `/assets/landing-page.png`: Landing page hero used on the docs home screen.
+- `/assets/metrics-mockup.png`: Metrics feature mockup for documentation and enablement.
+- `/assets/demo-video.mp4`: Overview walkthrough for onboarding or marketing use.
 
 <Callout>
 All image assets live in the `/images` and `/logo` directories. Keep filenames predictable; we reserve camelCase for UI exports and kebab-case for marketing composites.
