--- a/index.mdx
+++ b/index.mdx
@@ -8,10 +8,19 @@ description: "Everything you need to launch, learn, and iterate with Humyn Studi
 Humyn turns real conversations from Reddit into crisp, trustworthy insight for product teams. These docs get you from first login to confident decisions without fluff.
 
 <img
-  src="/images/hero-light.png"
-  alt="Humyn Studio dashboard highlighting comment insights"
+  src="/assets/landing-page.png"
+  alt="Humyn landing page hero with product highlights"
   style={{ borderRadius: "1rem", marginTop: "1.5rem", boxShadow: "0 24px 70px rgba(9, 9, 11, 0.18)" }}
 />
+
+<video
+  src="/assets/demo-video.mp4"
+  poster="/assets/landing-page.png"
+  controls
+  style={{ width: "100%", marginTop: "2rem", borderRadius: "1rem", boxShadow: "0 24px 70px rgba(15, 23, 42, 0.2)" }}
+>
+  Your browser does not support the video tag.
+</video>
 
 ## Start with the essentials
 
