docs: refine copy highlights and placeholders

--- a/core-features/metrics.mdx
+++ b/core-features/metrics.mdx
@@ -5,7 +5,7 @@ description: "Translate Humyn signals into the numbers leaders expect"
 
 ## What Metrics does
 
-Metrics transforms the qualitative insights Humyn surfaces into lightweight KPIs. It gives founders, product, and GTM leaders a clear lens on how community sentiment and activation efforts are trending.
+Metrics transforms the qualitative insights Humyn surfaces into <mark>lightweight KPIs</mark>. It gives founders, product, and GTM leaders a clear lens on how community sentiment and activation efforts are trending.
 
 <img
   src="/assets/metrics-mockup.png"
