--- a/guides/roadmap.mdx
+++ b/guides/roadmap.mdx
@@ -8,7 +8,7 @@ description: "Track upcoming priorities and influence what ships next."
 Upcoming priorities for Humyn. Drop suggestions in the `#product-feedback` channel on [Discord](https://discord.gg/bycbt28zpk) so we can incorporate your requests.
 
 <Callout>
-Dates represent the earliest planned release window. We adjust based on customer signal and research impact.
+Dates represent the earliest planned release window. We adjust based on <mark>customer signal</mark> and <mark>research impact</mark>.
 </Callout>
 
 ## At a Glance
@@ -17,15 +17,15 @@ Dates represent the earliest planned release window. We adjust based on customer
   <Card title="High Priority" icon="bolt">
     <List>
       <ListItem>
-        <strong>November 2025 · Export data from projects</strong><br />
+        <strong>November 2025 · <mark>Export data from projects</mark></strong><br />
         Give teams a reliable backup and enable downstream analysis in BI tools.
       </ListItem>
       <ListItem>
-        <strong>November 2025 · Manual text input</strong><br />
+        <strong>November 2025 · <mark>Manual text input</mark></strong><br />
         Let users add briefs, interview notes, or survey answers directly to Humyn.
       </ListItem>
       <ListItem>
-        <strong>December 2025 · Pruning & staging</strong><br />
+        <strong>December 2025 · <mark>Pruning & staging</mark></strong><br />
         Review and triage comments before they count against usage limits.
       </ListItem>
     </List>
@@ -33,7 +33,7 @@ Dates represent the earliest planned release window. We adjust based on customer
   <Card title="Medium Priority" icon="chart-simple">
     <List>
       <ListItem>
-        <strong>December 2026 · More source options</strong><br />
+        <strong>December 2026 · <mark>More source options</mark></strong><br />
         Expand ingest to Twitter/X, interview transcripts, and other high-signal channels.
       </ListItem>
     </List>
@@ -41,11 +41,11 @@ Dates represent the earliest planned release window. We adjust based on customer
   <Card title="Low Priority" icon="seedling">
     <List>
       <ListItem>
-        <strong>2026 · Team collaboration</strong><br />
+        <strong>2026 · <mark>Team collaboration</mark></strong><br />
         Shared workspaces, permissions, and multi-user review flows.
       </ListItem>
       <ListItem>
-        <strong>2026 · Sandbox mode</strong><br />
+        <strong>2026 · <mark>Sandbox mode</mark></strong><br />
         Canvas-style interface for UX researchers to map quotes visually.
       </ListItem>
     </List>
