--- a/guides/use-cases.mdx
+++ b/guides/use-cases.mdx
@@ -5,7 +5,7 @@ description: "Learn how teams apply Humyn to make smarter, faster decisions."
 
 # 🧭 Guides & Use Cases
 
-Learn how teams and individuals use **Humyn** to uncover real audience insights, make smarter product decisions, and move faster with clarity.
+Learn how teams and individuals use **Humyn** to uncover <mark>real audience insight</mark>, make smarter product decisions, and move faster with clarity.
 
 ---
 
@@ -27,7 +27,7 @@ Turn community conversations into **roadmap clarity** and **feature confidence**
 - Turn those quotes into evidence for specs, decks, and internal presentations.
 
 ### Result  
-Humyn replaces guesswork with voice-of-user insight—helping you ship features people actually want.
+Humyn replaces guesswork with <mark>voice-of-user evidence</mark>—helping you ship features people actually want.
 
 ---
 
@@ -48,7 +48,7 @@ Identify **market sentiment** and **emerging signals** from public discussions.
 - Combine Humyn’s findings with trading signals or news sentiment to anticipate volatility.
 
 ### Result  
-Humyn turns noisy financial chatter into interpretable patterns—so you catch shifts in emotion and hype before they move markets.
+Humyn turns noisy financial chatter into <mark>interpretable patterns</mark>—so you catch shifts in emotion and hype before they move markets.
 
 ---
 
@@ -91,16 +91,16 @@ Understand how users talk about competitors—what they praise, what they compla
 | “Expensive pricing” | Negative | Emphasize cost efficiency and ROI. |
 
 ### Result  
-Humyn lets product teams see the real market conversation, turning feedback into competitive advantage.
+Humyn lets product teams see the <mark>real market conversation</mark>, turning feedback into competitive advantage.
 
 ---
 
 ## ⚡ Quick Start Tips
 
-- Run Humyn weekly as a **pulse check** for your category.  
+- Run Humyn weekly as a <mark>pulse check</mark> for your category.  
 - Sync exports into Notion, FigJam, or Linear to keep qualitative and quantitative data together.  
 - Share Humyn insights during sprint reviews to anchor decisions in user language.  
-- Track trends using Humyn’s **Themes** and **Top Quotes** as your qualitative dataset.
+- Track trends using Humyn’s <mark>Themes</mark> and <mark>Top Quotes</mark> as your qualitative dataset.
 
 ---
 
@@ -112,4 +112,10 @@ Humyn helps you:
 - Analyze competitors with full transparency.  
 - Back your roadmap, trades, and campaigns with real human sentiment.
 
-🪴 From Reddit noise to actionable insight—all in one click.
+🪴 From Reddit noise to <mark>actionable insight</mark>—all in one click.
+
+<img
+  src="/assets/placeholder-frame.svg"
+  alt="Placeholder for guides imagery"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
+/>
