--- a/index.mdx
+++ b/index.mdx
@@ -5,7 +5,7 @@ description: "Everything you need to launch, learn, and iterate with Humyn Studi
 
 # Welcome to Humyn Docs
 
-Humyn turns real conversations from Reddit into crisp, trustworthy insight for product teams. These docs get you from first login to confident decisions without fluff.
+Humyn turns real conversations from Reddit into <mark>trustworthy insight</mark> for product teams. These docs take you from first login to <mark>confident decisions</mark> without fluff.
 
 <img
   src="/assets/landing-page.png"
