--- a/introduction/account-and-billing.mdx
+++ b/introduction/account-and-billing.mdx
@@ -17,9 +17,9 @@ All plans include full access to dashboards, Explore views, and saved insights. 
 
 ## Choosing the Right Tier
 
-- **Free** — Perfect for founders or researchers exploring a single market. Set up two projects (e.g., core product + competitor) and monitor a few targeted communities.  
-- **Basic** — Best for seed and Series A teams that need weekly intelligence. The 1,000 comment allowance supports recurring scans across several personas, and unlimited AI chat keeps synthesis fast for roadmap or content planning.  
-- **Pro** — Designed for agencies, consultancies, or in-house insight teams running simultaneous initiatives. Larger comment volumes support market sweeps, and priority support ensures quick help during launches.
+- <mark>Free</mark> — Perfect for founders or researchers exploring a single market. Monitor two projects (for example, your core product plus a competitor space) and validate positioning quickly.  
+- <mark>Basic</mark> — Best for seed and Series A teams that require weekly intelligence. 1,000 comments/month supports recurring scans across personas and unlimited AI chat keeps synthesis fast.  
+- <mark>Pro</mark> — Built for agencies, consultancies, or in-house insight teams running simultaneous initiatives. Larger allotments support market sweeps and priority support keeps launches on track.
 
 ## Feature Matrix
 
@@ -62,12 +62,18 @@ All plans include full access to dashboards, Explore views, and saved insights. 
 
 ## Reporting Rhythm
 
-- **Monthly digest:** Usage vs. allocation, new projects launched, notable insights produced.  
-- **Quarterly briefing:** Adoption by function, tier fit, and recommendations for next quarter.  
-- **Ad hoc updates:** Alert finance and leadership if you’re trending toward limits mid-cycle.
+- <mark>Monthly digest</mark>: Usage vs. allocation, new projects launched, notable insights.  
+- <mark>Quarterly briefing</mark>: Adoption by function, tier fit, and upcoming adjustments.  
+- <mark>Ad hoc updates</mark>: Alert finance and leadership when usage spikes mid-cycle.
 
 ## Handy Links
 
 - Billing portal (coming soon) — Track invoices and manage payment details.  
 - Workspace standards — Link your internal Notion/Confluence page here.  
 - Finance escalation — Document the Slack channel or email alias for urgent billing issues.
+
+<img
+  src="/assets/placeholder-frame.svg"
+  alt="Placeholder for billing dashboard preview"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
+/>
