--- a/introduction/quickstart.mdx
+++ b/introduction/quickstart.mdx
@@ -5,20 +5,11 @@ description: "Launch Humyn in under an hour with the workflows our beta teams fo
 
 ## Launch Checklist
 
-1. **Request workspace access**  
-   Confirm your invite email, set up 2FA, and add up to five collaborators.
-
-2. **Select focus communities**  
-   Start with two or three high-signal subreddits, Twitter Lists, or YouTube channels.
-
-3. **Drop in your first prompts**  
-   Use conversational prompts like “What are people struggling with during onboarding?” or “How do founders describe AI productivity tools?”.
-
-4. **Review instant insights**  
-   Head to the dashboard to confirm Humyn captured the right themes, quotes, and sentiment trends.
-
-5. **Share the narrative**  
-   Pin insights to a workspace board and ship a quick Loom or summary doc to stakeholders.
+1. <mark>Request workspace access</mark> — confirm your invite email, set up 2FA, and add collaborators.  
+2. <mark>Select focus communities</mark> — start with two or three high-signal subreddits, Twitter Lists, or YouTube channels.  
+3. <mark>Drop in your first prompts</mark> — use questions like “What blocks onboarding?” or “How do founders describe AI productivity tools?”.  
+4. <mark>Review instant insights</mark> — confirm Humyn captured the right themes, quotes, and sentiment trends.  
+5. <mark>Share the narrative</mark> — pin insights to a workspace board and publish a quick Loom or written recap.
 
 ---
 
@@ -36,15 +27,15 @@ description: "Launch Humyn in under an hour with the workflows our beta teams fo
 | Prompt | Outcome | Suggested Owner |
 | --- | --- | --- |
 | “Summarize adoption blockers for AI research tools” | Product direction for activation sprints. | Product/Design |
-| “Collect praise quotes about research workflows” | Marketing copy for landing pages. | Marketing |
+| “Collect praise quotes about research workflows” | Messaging for landing pages and sales decks. | Marketing |
 | “Identify objections from enterprise buyers” | Enablement insight for sales calls. | GTM |
 
 ---
 
 ## First Week Goals
 
-- Publish one spotlight insight with supporting quotes.
-- Capture three bookmarked threads for deep dives.
+- Publish one spotlight insight with supporting quotes.  
+- Capture three bookmarked threads for deep dives.  
 - Sync with stakeholders to align on emerging opportunities.
 
 ![Humyn dashboard walkthrough](../images/hero-dark.png)
@@ -52,6 +43,12 @@ description: "Launch Humyn in under an hour with the workflows our beta teams fo
 > Replace the placeholder image with current UI captures or Loom thumbnails from your beta workspace.
 
 ---
+
+<img
+  src="/assets/placeholder-frame.svg"
+  alt="Placeholder for onboarding workflow illustration"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
+/>
 
 ## Next Steps
 
