--- a/introduction/what-is-humyn.mdx
+++ b/introduction/what-is-humyn.mdx
@@ -5,9 +5,9 @@ description: "An AI-native research assistant that turns community noise into in
 
 # What is Humyn?
 
-**Humyn** is a lightweight, AI-powered research tool that turns real online conversations—starting with Reddit, Twitter, and YouTube—into trustworthy, actionable insights.
+**Humyn** is a <mark>lightweight</mark>, <mark>AI-powered research tool</mark> that turns real online conversations—starting with Reddit, Twitter, and YouTube—into <mark>trustworthy, actionable insight</mark>.
 
-We help designers, founders, researchers, and marketers understand what people are already saying about products, brands, and ideas—without the heavy lift of traditional research.
+We help designers, founders, researchers, and marketers understand what people already say about products, brands, and ideas—without the heavy lift of traditional research.
 
 ---
 
@@ -15,10 +15,10 @@ We help designers, founders, researchers, and marketers understand what people a
 
 Humyn automatically collects and analyzes community discussions to surface patterns, themes, and sentiment that reveal:
 
-- **Pain points** customers keep running into  
-- **Desires** and unmet needs that hint at demand  
-- **Objections** and misconceptions that block adoption  
-- **Opportunities** for product, positioning, and storytelling  
+- **Pain points** customers keep running into.  
+- **Desires** and unmet needs that hint at demand.  
+- **Objections** and misconceptions that block adoption.  
+- **Opportunities** for product, positioning, and storytelling.  
 
 Everything is distilled into plain-language briefs, visual dashboards, and ready-to-use quotes that make decision making effortless.
 
@@ -28,10 +28,10 @@ Everything is distilled into plain-language briefs, visual dashboards, and ready
 
 Modern research is scattered across social platforms and forums. Humyn bridges that gap by letting you:
 
-- **See what real users think**—instantly and in their own words  
-- **Validate ideas** with credible proof before you invest  
-- **Spot emerging trends** directly from the communities that shape them  
-- **Translate feedback into action** for product, marketing, and research teams  
+- <mark>See what real users think</mark>—instantly and in their own words.  
+- <mark>Validate ideas</mark> with credible proof before you invest.  
+- <mark>Spot emerging trends</mark> directly from the communities that shape them.  
+- <mark>Translate feedback into action</mark> for product, marketing, and research teams.  
 
 ---
 
@@ -48,7 +48,7 @@ Modern research is scattered across social platforms and forums. Humyn bridges t
 
 - **Designers** – Validate UX decisions with real feedback snapshots.  
 - **Founders** – Discover what users love, hate, and need next.  
-- **Marketers** – Build messaging that actually resonates.  
+- **Marketers** – Build messaging that resonates.  
 - **Researchers** – Accelerate synthesis and storytelling with AI.  
 
 ---
@@ -57,9 +57,9 @@ Modern research is scattered across social platforms and forums. Humyn bridges t
 
 We believe user research should be:
 
-- **Accessible** – No $100k enterprise tools or clunky setups.  
-- **Transparent** – Insights grounded in the real conversations your customers have.  
-- **Empowering** – Built for creative thinkers, not buried in dashboards.  
+- <mark>Accessible</mark> – No $100k enterprise tools or clunky setups.  
+- <mark>Transparent</mark> – Insights grounded in the conversations your customers have.  
+- <mark>Empowering</mark> – Built for creative thinkers, not buried in dashboards.  
 
 Humyn is where community voices meet creative decisions.  
 It’s **user research for the modern internet.**
@@ -75,6 +75,12 @@ It’s **user research for the modern internet.**
 <Tip>
 Swap in production-ready renders from your design team as they become available.
 </Tip>
+
+<img
+  src="/assets/placeholder-frame.svg"
+  alt="Placeholder for additional Humyn media"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
+/>
 
 ## Video & Demo Assets
 
