--- a/guides/roadmap.mdx
+++ b/guides/roadmap.mdx
@@ -1,61 +1,77 @@
 ---
 title: "Humyn Roadmap"
-description: "Track upcoming priorities and influence what ships next."
+description: "See where Humyn is headed next and help us prioritize the most valuable insights."
 ---
 
 # Humyn Roadmap
 
-Upcoming priorities for Humyn. Drop suggestions in the `#product-feedback` channel on [Discord](https://discord.gg/bycbt28zpk) so we can incorporate your requests.
+We build Humyn to uncover <mark>real community insight</mark> for builders, strategists, and researchers. The roadmap below reflects what’s in motion right now. Add your voice in `#product-feedback` on [Discord](https://discord.gg/bycbt28zpk) or email `hello@humyn.space`.
 
 <Callout>
-Dates represent the earliest planned release window. We adjust based on <mark>customer signal</mark> and <mark>research impact</mark>.
+Timelines represent earliest release targets. We adjust as signal from customers, data quality, and compliance needs evolve.
 </Callout>
 
-## At a Glance
-
-<CardGroup cols={3}>
+<Columns cols={3}>
   <Card title="High Priority" icon="bolt">
+    <Badge color="blue">Delivery window: Q4 2025</Badge>
+    <Divider />
     <List>
       <ListItem>
-        <strong>November 2025 · <mark>Export data from projects</mark></strong><br />
-        Give teams a reliable backup and enable downstream analysis in BI tools.
+        <strong>Export data from projects</strong><br />
+        <small>November 2025</small><br />
+        Allow teams to keep <mark>offline backups</mark> and feed Humyn output into BI tools.
       </ListItem>
       <ListItem>
-        <strong>November 2025 · <mark>Manual text input</mark></strong><br />
-        Let users add briefs, interview notes, or survey answers directly to Humyn.
+        <strong>Manual text input</strong><br />
+        <small>November 2025</small><br />
+        Add briefs, interview notes, or research summaries directly so Humyn can <mark>enrich custom data</mark>.
       </ListItem>
       <ListItem>
-        <strong>December 2025 · <mark>Pruning & staging</mark></strong><br />
-        Review and triage comments before they count against usage limits.
+        <strong>Pruning & staging before ingest</strong><br />
+        <small>December 2025</small><br />
+        Review, trim, and approve comments before they count toward usage limits—giving analysts <mark>precision control</mark>.
       </ListItem>
     </List>
   </Card>
   <Card title="Medium Priority" icon="chart-simple">
+    <Badge color="purple">Discovery: In progress</Badge>
+    <Divider />
     <List>
       <ListItem>
-        <strong>December 2026 · <mark>More source options</mark></strong><br />
-        Expand ingest to Twitter/X, interview transcripts, and other high-signal channels.
+        <strong>Expanded source support</strong><br />
+        <small>December 2026</small><br />
+        Add Twitter/X, interview transcripts, and customer research uploads to broaden <mark>multi-channel insight</mark>.
       </ListItem>
     </List>
   </Card>
-  <Card title="Low Priority" icon="seedling">
+  <Card title="Exploratory" icon="seedling">
+    <Badge color="slate">Backlog</Badge>
+    <Divider />
     <List>
       <ListItem>
-        <strong>2026 · <mark>Team collaboration</mark></strong><br />
-        Shared workspaces, permissions, and multi-user review flows.
+        <strong>Team collaboration</strong><br />
+        <small>2026</small><br />
+        Shared workspaces, permissions, and reviews so cross-functional teams co-create <mark>insight narratives</mark>.
       </ListItem>
       <ListItem>
-        <strong>2026 · <mark>Sandbox mode</mark></strong><br />
-        Canvas-style interface for UX researchers to map quotes visually.
+        <strong>Sandbox insight canvas</strong><br />
+        <small>2026</small><br />
+        Canvas-style environment for UX researchers to map quotes visually and build <mark>story-first presentations</mark>.
       </ListItem>
     </List>
   </Card>
-</CardGroup>
+</Columns>
+
+<img
+  src="/assets/placeholder-frame.svg"
+  alt="Placeholder for roadmap visualization"
+  style={{ borderRadius: "1rem", margin: "2.5rem 0", boxShadow: "0 24px 70px rgba(15, 23, 42, 0.18)" }}
+/>
 
 ## How to Shape the Roadmap
 
-1. Share ideas via Discord or email `hello@humyn.space`.  
-2. Include project context, target personas, and example threads that show the need.  
-3. Upvote existing requests—community signal influences prioritization.
+1. Share ideas in the Discord channel or email `hello@humyn.space`.  
+2. Include context: which personas benefit, the workflows impacted, and sample threads validating the need.  
+3. Upvote existing requests—community signal keeps us aligned with the most valuable outcomes.
 
-We review feedback every week and update this page after each planning cycle.
+We review feedback every week during product planning and update this page after each milestone cycle.
