--- a/snippets/head.mdx
+++ b/snippets/head.mdx
@@ -17,6 +17,124 @@
       font-family: 'Satoshi', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
     }
 
+    body {
+      background:
+        radial-gradient(circle at 10% 15%, rgba(96, 165, 250, 0.18), transparent 55%),
+        radial-gradient(circle at 90% 85%, rgba(37, 99, 235, 0.14), transparent 60%),
+        #F8FAFF;
+      background-attachment: fixed;
+    }
+
+    html.dark body {
+      background:
+        radial-gradient(circle at 15% 20%, rgba(37, 99, 235, 0.24), transparent 55%),
+        radial-gradient(circle at 80% 80%, rgba(96, 165, 250, 0.16), transparent 60%),
+        #0B1120;
+    }
+
+    mark {
+      background: linear-gradient(135deg, rgba(96, 165, 250, 0.25), rgba(37, 99, 235, 0.35));
+      color: inherit;
+      padding: 0 0.25em;
+      border-radius: 0.35em;
+    }
+
+    .roadmap-board {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.75rem;
+      margin-top: 2.5rem;
+    }
+
+    .roadmap-column {
+      background: rgba(255, 255, 255, 0.88);
+      border: 1px solid rgba(226, 232, 240, 0.8);
+      border-radius: 26px;
+      padding: 1.8rem;
+      box-shadow: 0 28px 70px rgba(15, 23, 42, 0.1);
+      backdrop-filter: blur(14px);
+      display: flex;
+      flex-direction: column;
+      gap: 1.2rem;
+    }
+
+    html.dark .roadmap-column {
+      background: rgba(15, 23, 42, 0.72);
+      border-color: rgba(99, 102, 241, 0.24);
+      box-shadow: 0 32px 80px rgba(2, 6, 23, 0.55);
+    }
+
+    .roadmap-column h3 {
+      margin: 0;
+      font-size: 1.05rem;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      color: #2563EB;
+    }
+
+    html.dark .roadmap-column h3 {
+      color: #60A5FA;
+    }
+
+    .roadmap-column .roadmap-subtitle {
+      margin: 0;
+      font-size: 0.9rem;
+      color: #475569;
+    }
+
+    html.dark .roadmap-column .roadmap-subtitle {
+      color: #CBD5F5;
+    }
+
+    .roadmap-item {
+      background: rgba(255, 255, 255, 0.94);
+      border: 1px solid rgba(226, 232, 240, 0.9);
+      border-radius: 22px;
+      padding: 1.2rem 1.4rem;
+      box-shadow: 0 16px 40px rgba(15, 23, 42, 0.08);
+      display: flex;
+      flex-direction: column;
+      gap: 0.45rem;
+    }
+
+    html.dark .roadmap-item {
+      background: rgba(15, 23, 42, 0.85);
+      border-color: rgba(74, 85, 104, 0.6);
+      box-shadow: 0 20px 45px rgba(2, 6, 23, 0.6);
+    }
+
+    .roadmap-item time {
+      font-size: 0.75rem;
+      letter-spacing: 0.16em;
+      text-transform: uppercase;
+      color: #2563EB;
+      font-weight: 600;
+    }
+
+    html.dark .roadmap-item time {
+      color: #60A5FA;
+    }
+
+    .roadmap-item strong {
+      font-size: 1.05rem;
+      line-height: 1.3;
+      color: #0F172A;
+    }
+
+    html.dark .roadmap-item strong {
+      color: #E2E8F0;
+    }
+
+    .roadmap-item p {
+      margin: 0;
+      font-size: 0.95rem;
+      color: #475569;
+    }
+
+    html.dark .roadmap-item p {
+      color: #C7D2FE;
+    }
+
     code,
     pre,
     kbd,
