content: update support contact, socials, and visuals

--- a/index.mdx
+++ b/index.mdx
@@ -142,5 +142,11 @@ When you need to go deeper, these walkthroughs keep the team moving.
 </Columns>
 
 <Tip>
-Need help fast? Hit the `Support` link in the navbar or email <a href="mailto:hello@humyn.space">hello@humyn.space</a>.
+Need help fast? Hit the `Support` link in the navbar or email <a href="mailto:support@humyn.studio">support@humyn.studio</a>.
 </Tip>
+
+<img
+  src="/screenshots/project_dashboard.png"
+  alt="Humyn project dashboard overview"
+  style={{ borderRadius: "1rem", marginTop: "2.5rem", boxShadow: "0 24px 70px rgba(15, 23, 42, 0.14)" }}
+/>
